fixed some aligning - to make uniform and for screensize

--- a/examples/weather.css
+++ b/examples/weather.css
@@ -36,18 +36,17 @@ a {
 
 #output {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-items: center;
     width: 90%;
     height: auto;
     margin: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: larger;
     padding-bottom: 10px;
     line-height: 30px;
 }
 input {
     background-color: rgb(219, 246, 255);
+    width: 45px;
 }
 
 /* checks any valid <input> */
@@ -63,6 +62,9 @@ input:invalid {
     border: 2px solid red;
     box-shadow: 0 2px 5px 0 red, 0 2px 5px 0 red;
   }
+input#dark {
+    width: fit-content;
+}
 
 /* https://developer.mozilla.org/en-US/docs/Web/CSS/:valid */
 
@@ -79,6 +81,7 @@ input:invalid {
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 8px;
+    width: 145px;
 }
 
 .button:hover {
@@ -96,6 +99,10 @@ li {
     list-style: none;
     text-align: center;
     width: auto;
+}
+
+#zipCheck {
+    margin-bottom: 10px;
 }
 
 footer {
@@ -126,6 +133,9 @@ i {
 
 div {
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #weatherAlert {
@@ -156,11 +166,11 @@ div {
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-    padding: 15px;
+    padding: 10px;
 }
 
 #buttons {
-    padding: 25px;
+    margin-bottom: 10px;
 }
 
 .explain {
